// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout testClass1 testClass2"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <span
      color="subdued"
      data-euiicon-type="arrowUp"
    />
    <div
      class="euiSpacer euiSpacer--m"
    />
    <h2
      class="euiTitle euiTitle--medium"
    >
      Title
    </h2>
    <span
      class="euiTextColor euiTextColor--subdued"
    >
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiText euiText--medium"
      >
        <p>
          Body
        </p>
      </div>
    </span>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div>
      Actions
    </div>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiSpacer euiSpacer--l"
    />
    actions
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        action1
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        action2
      </div>
    </div>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <span
      class="euiTextColor euiTextColor--subdued"
    >
      <div
        class="euiText euiText--medium"
      >
        body
      </div>
    </span>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <span>
      Custom icon
    </span>
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <span
      color="subdued"
      data-euiicon-type="arrowUp"
    />
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <span
      color="danger"
      data-euiicon-type="arrowUp"
    />
    <div
      class="euiSpacer euiSpacer--m"
    />
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiEmptyPrompt euiEmptyPrompt--verticalLayout"
>
  <div
    class="euiEmptyPrompt__main"
  >
    <div
      class="euiTitle euiTitle--medium"
    >
      title
    </div>
  </div>
  <div
    class="euiEmptyPrompt__footer"
  />
</div>
`;
